ya quedo pero quiero ponerlo el  doble de grande, lo voy a guardar para que no lo rompa y se me olvide los valores

--- a/Flexbox_Grid/index.html
+++ b/Flexbox_Grid/index.html
@@ -8,15 +8,17 @@
   </head>
   <body>
     <div id="main-container">
-      <div id="cuadros">
-        <div class="amarrillo"></div>
-        <div class="blanco-superior"></div>
+      <div class="parte-superior">
+        <div class="amarrillo_blanco">
+          <div class="amarrillo"></div>
+          <div class="blanco1"></div>
+        </div>
         <div class="rojo"></div>
       </div>
-      <div id="fila-inferior">
+      <div class="parte-inferior">
         <div class="azul"></div>
-        <div class="blanco-inferior1"></div>
-        <div class="blanco-inferior2"></div>
+        <div class="blanco2"></div>
+        <div class="blanco3"></div>
       </div>
     </div>
   </body>
